--- a/styles/Login.module.css
+++ b/styles/Login.module.css
@@ -11,4 +11,9 @@
     color: #ffffff;
     border: none;
     border-radius: 2px;
+    display: inline-block;
+    width: 100%;
+    padding: 12px;
+
+    margin-bottom: 24px;
 }
